// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EllipsisIcon renders the expected snapshot 1`] = `
<svg
  aria-hidden="true"
  class="svg-inline--fa fa-ellipsis-v fa-w-6 "
  data-icon="ellipsis-v"
  data-prefix="fas"
  focusable="false"
  role="img"
  viewBox="0 0 192 512"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M96 184c39.8 0 72 32.2 72 72s-32.2 72-72 72-72-32.2-72-72 32.2-72 72-72zM24 80c0 39.8 32.2 72 72 72s72-32.2 72-72S135.8 8 96 8 24 40.2 24 80zm0 352c0 39.8 32.2 72 72 72s72-32.2 72-72-32.2-72-72-72-72 32.2-72 72z"
    fill="currentColor"
  />
</svg>
`;

exports[`EllipsisIcon with a className set renders the expected snapshot 1`] = `
<svg
  aria-hidden="true"
  class="svg-inline--fa fa-ellipsis-v fa-w-6 hello-world"
  data-icon="ellipsis-v"
  data-prefix="fas"
  focusable="false"
  role="img"
  viewBox="0 0 192 512"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M96 184c39.8 0 72 32.2 72 72s-32.2 72-72 72-72-32.2-72-72 32.2-72 72-72zM24 80c0 39.8 32.2 72 72 72s72-32.2 72-72S135.8 8 96 8 24 40.2 24 80zm0 352c0 39.8 32.2 72 72 72s72-32.2 72-72-32.2-72-72-72-72 32.2-72 72z"
    fill="currentColor"
  />
</svg>
`;
